[package]
name = "single-server-queueing-system"
authors = ["Alif Yasa"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.18"
rand = "0.8.5"
rand_distr = "0.4.3"
